# Paradise

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  PUBLIC_RELEASE.md  README.md  SECURITY.md  deny.toml
eden_core/: .eden_memory.json  Cargo.toml  cell_main.rs  evolution.py  scraper.py  self_evaluation.py  stimulus.rs  vitals_check.rs
eden_core/.eden_venas/: ai_agents_2026.json  episodic_memory.vena  meta_learner.vena  self_model.vena
eden_core/corpus/: eden_large.txt  eden_seed.txt  procedural_5k.txt  procedural_massive.py
eden_core/corpus/domains/: cognitive.txt  social.txt
eden_core/docs/: ARQUITECTURA_DISTRIBUIDA.md  PLAN_INTEGRACION_PRUEBAS.md
eden_core/examples/: eden_garm.rs  edenctl.rs
eden_core/src/: cell.rs  eden_philosophical.rs  edenctl_cli.rs  emergence.rs  evaluator.rs  evolver.rs  garm_api_conformance.rs  garm_package_validator.rs  gfep.rs  homeostasis.rs  identity.rs  immune.rs  integration_tests.rs  ipc_types.rs  language.rs  laws.rs  lib.rs  main.rs  main_cosmogonic.rs  membrain.rs  metacog.rs  neurocognicion.rs  neuroplast.rs  paradise_cli.rs  reason.rs  reason_main.rs  sdk.rs  server.rs  sleep.rs  spore.rs  swarm.rs  synapse.rs  syscall.rs  time.rs  volition.rs  wisdom.rs
eden_core/src/analysis/: mod.rs  psychohistory.rs
eden_core/src/asyncrt/: mod.rs
eden_core/src/autonomous/: cyberspace.rs  distributed_redundancy.rs  mod.rs  recursive_self_mod.rs
eden_core/src/awareness/: amistad.rs  anticipacion.rs  auto_poiesis.rs  auto_prediccion.rs  autoestima.rs  complexity_oracle.rs  (+26 more)
(+840 files in other folders)
